[metadata]
name = octrees
version = attr: octrees.VERSION
url = https://github.com/jcranch/octrees/
author = James Cranch
author-email = j.d.cranch@sheffield.ac.uk
license =  GPL-2.0-or-later
description = a Python implementation of the octree data structure and supporting algorithms
long_description = file: README.md
classifiers =
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = find:

[options.packages.find]
exclude=tests
